--- a/src/Component/Login.css
+++ b/src/Component/Login.css
@@ -1,19 +1,6 @@
-/*body {
-    background-image: url("C:\Users\HP\Desktop\pro sports emporium\bac.jpg");
-    height: 100vh;
-    width: 100vw;
-    margin: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}*/
-h3{
+h2{
     font-family:'Lobster', cursive;
     color:black
-}
-h4{
-    color: aqua;
 }
 .container{
     font-family:'Lobster', cursive;
@@ -91,10 +78,7 @@ background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, F
         font-weight: 600;
         padding-bottom: 20px;
 }
-p{
-    font-family:'Lobster', cursive;
-    color: #3f0b4b;
-}
+
 .login-container button {
 
     font-family:'Lobster', cursive;
@@ -110,8 +94,19 @@ p{
     background-color:#530962
     
 }
-button{
-    background-color:#523658;
-    color:lightgray;
+ button {
 
+    font-family:'Lobster', cursive;
+    font-weight: 600;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    width: 35%;
+    
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color:#530962
+    
 }
+
